--- a/amazon.html
+++ b/amazon.html
@@ -3,11 +3,7 @@
 
 <head>
   <title>Vacation World</title>
-  <style>
-    p {
-      font-family: Arial;
-    }
-  </style>
+<link rel="stylesheet" href="sty.css">
 </head>
 
 <body>
